chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "univer.ai",
   "type": "module",
-  "version": "0.2.11",
+  "version": "0.2.12",
   "private": false,
   "packageManager": "pnpm@9.8.0",
   "scripts": {
@@ -14,8 +14,8 @@
     "lint:types": "tsc --noEmit"
   },
   "dependencies": {
-    "@antv/g2": "^5.2.3",
-    "@codesandbox/sandpack-react": "^2.19.0",
+    "@antv/g2": "^5.2.5",
+    "@codesandbox/sandpack-react": "^2.19.3",
     "@docsearch/css": "^3.6.1",
     "@docsearch/react": "^3.6.1",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -30,63 +30,67 @@
     "@react-spring/web": "^9.7.4",
     "@stackblitz/sdk": "^1.11.0",
     "@types/youtube-player": "^5.5.11",
-    "@univerjs-pro/collaboration": "0.2.11",
-    "@univerjs-pro/collaboration-client": "0.2.11",
-    "@univerjs-pro/live-share": "0.2.11",
-    "@univerjs-pro/print": "0.2.11",
-    "@univerjs-pro/sheets-exchange-client": "0.2.11",
-    "@univerjs-pro/sheets-print": "0.2.11",
-    "@univerjs/core": "0.2.11",
-    "@univerjs/data-validation": "0.2.11",
-    "@univerjs/design": "0.2.11",
-    "@univerjs/docs": "0.2.11",
-    "@univerjs/docs-drawing": "0.2.11",
-    "@univerjs/docs-drawing-ui": "0.2.11",
-    "@univerjs/docs-hyper-link-ui": "0.2.11",
-    "@univerjs/docs-thread-comment-ui": "0.2.11",
-    "@univerjs/docs-ui": "0.2.11",
-    "@univerjs/drawing": "0.2.11",
-    "@univerjs/drawing-ui": "0.2.11",
-    "@univerjs/engine-formula": "0.2.11",
-    "@univerjs/engine-numfmt": "0.2.11",
-    "@univerjs/engine-render": "0.2.11",
-    "@univerjs/facade": "0.2.11",
-    "@univerjs/find-replace": "0.2.11",
+    "@univerjs-pro/collaboration": "0.2.12",
+    "@univerjs-pro/collaboration-client": "0.2.12",
+    "@univerjs-pro/exchange-client": "^0.2.12",
+    "@univerjs-pro/live-share": "0.2.12",
+    "@univerjs-pro/print": "0.2.12",
+    "@univerjs-pro/sheets-exchange-client": "0.2.12",
+    "@univerjs-pro/sheets-print": "0.2.12",
+    "@univerjs/core": "0.2.12",
+    "@univerjs/data-validation": "0.2.12",
+    "@univerjs/design": "0.2.12",
+    "@univerjs/docs": "0.2.12",
+    "@univerjs/docs-drawing": "0.2.12",
+    "@univerjs/docs-drawing-ui": "0.2.12",
+    "@univerjs/docs-hyper-link": "^0.2.12",
+    "@univerjs/docs-hyper-link-ui": "0.2.12",
+    "@univerjs/docs-thread-comment-ui": "0.2.12",
+    "@univerjs/docs-ui": "0.2.12",
+    "@univerjs/drawing": "0.2.12",
+    "@univerjs/drawing-ui": "0.2.12",
+    "@univerjs/engine-formula": "0.2.12",
+    "@univerjs/engine-numfmt": "0.2.12",
+    "@univerjs/engine-render": "0.2.12",
+    "@univerjs/facade": "0.2.12",
+    "@univerjs/find-replace": "0.2.12",
     "@univerjs/icons": "^0.1.77",
-    "@univerjs/network": "0.2.11",
-    "@univerjs/protocol": "0.1.39-alpha.4",
-    "@univerjs/rpc": "0.2.11",
-    "@univerjs/sheets": "0.2.11",
-    "@univerjs/sheets-conditional-formatting": "0.2.11",
-    "@univerjs/sheets-conditional-formatting-ui": "0.2.11",
-    "@univerjs/sheets-data-validation": "0.2.11",
-    "@univerjs/sheets-drawing": "0.2.11",
-    "@univerjs/sheets-drawing-ui": "0.2.11",
-    "@univerjs/sheets-filter": "0.2.11",
-    "@univerjs/sheets-filter-ui": "0.2.11",
-    "@univerjs/sheets-find-replace": "0.2.11",
-    "@univerjs/sheets-formula": "0.2.11",
-    "@univerjs/sheets-hyper-link": "0.2.11",
-    "@univerjs/sheets-hyper-link-ui": "0.2.11",
-    "@univerjs/sheets-numfmt": "0.2.11",
-    "@univerjs/sheets-thread-comment": "0.2.11",
-    "@univerjs/sheets-ui": "0.2.11",
-    "@univerjs/sheets-zen-editor": "0.2.11",
-    "@univerjs/slides": "0.2.11",
-    "@univerjs/slides-ui": "0.2.11",
-    "@univerjs/thread-comment": "0.2.11",
-    "@univerjs/thread-comment-ui": "0.2.11",
-    "@univerjs/ui": "0.2.11",
-    "@univerjs/uniscript": "0.2.11",
+    "@univerjs/network": "0.2.12",
+    "@univerjs/protocol": "0.1.39-alpha.15",
+    "@univerjs/rpc": "0.2.12",
+    "@univerjs/sheets": "0.2.12",
+    "@univerjs/sheets-conditional-formatting": "0.2.12",
+    "@univerjs/sheets-conditional-formatting-ui": "0.2.12",
+    "@univerjs/sheets-crosshair-highlight": "^0.2.12",
+    "@univerjs/sheets-data-validation": "0.2.12",
+    "@univerjs/sheets-drawing": "0.2.12",
+    "@univerjs/sheets-drawing-ui": "0.2.12",
+    "@univerjs/sheets-filter": "0.2.12",
+    "@univerjs/sheets-filter-ui": "0.2.12",
+    "@univerjs/sheets-find-replace": "0.2.12",
+    "@univerjs/sheets-formula": "0.2.12",
+    "@univerjs/sheets-hyper-link": "0.2.12",
+    "@univerjs/sheets-hyper-link-ui": "0.2.12",
+    "@univerjs/sheets-numfmt": "0.2.12",
+    "@univerjs/sheets-thread-comment": "0.2.12",
+    "@univerjs/sheets-thread-comment-base": "0.2.12",
+    "@univerjs/sheets-ui": "0.2.12",
+    "@univerjs/sheets-zen-editor": "0.2.12",
+    "@univerjs/slides": "0.2.12",
+    "@univerjs/slides-ui": "0.2.12",
+    "@univerjs/thread-comment": "0.2.12",
+    "@univerjs/thread-comment-ui": "0.2.12",
+    "@univerjs/ui": "0.2.12",
+    "@univerjs/uniscript": "0.2.12",
     "@visactor/univer-vchart-plugin": "^2.0.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "monaco-editor": "^0.50.0",
-    "next": "14.2.6",
+    "monaco-editor": "^0.51.0",
+    "next": "14.2.8",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
     "pako": "^2.1.0",
-    "prism-react-renderer": "^2.3.1",
+    "prism-react-renderer": "^2.4.0",
     "rc-slider": "^11.1.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -97,26 +101,26 @@
     "youtube-player": "^5.6.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.27.1",
-    "@eslint-react/eslint-plugin": "^1.12.1",
-    "@types/node": "^22.5.0",
+    "@antfu/eslint-config": "^3.3.2",
+    "@eslint-react/eslint-plugin": "^1.13.0",
+    "@types/node": "^22.5.4",
     "@types/pako": "^2.0.3",
-    "@types/react": "^18.3.4",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@univerjs/webpack-plugin": "0.5.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "9.9.0",
+    "eslint": "9.10.0",
     "eslint-plugin-react-hooks": "5.1.0-rc-8269d55d-20240802",
     "eslint-plugin-react-refresh": "^0.4.11",
-    "eslint-plugin-readable-tailwind": "^1.7.0",
-    "lint-staged": "^15.2.9",
+    "eslint-plugin-readable-tailwind": "^1.8.0",
+    "lint-staged": "^15.2.10",
     "monaco-editor-webpack-plugin": "^7.1.0",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.45",
     "raw-loader": "^4.0.2",
     "sharp": "^0.33.5",
     "simple-git-hooks": "^2.11.1",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4"
+    "typescript": "5.5.4"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
