--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "univer.ai",
   "type": "module",
-  "version": "0.2.14",
+  "version": "0.2.15",
   "private": false,
-  "packageManager": "pnpm@9.8.0",
+  "packageManager": "pnpm@9.10.0",
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=9"
+  },
   "scripts": {
     "prepare": "simple-git-hooks",
     "dev": "next dev",
@@ -30,67 +34,67 @@
     "@react-spring/web": "^9.7.4",
     "@stackblitz/sdk": "^1.11.0",
     "@types/youtube-player": "^5.5.11",
-    "@univerjs-pro/collaboration": "0.2.14",
-    "@univerjs-pro/collaboration-client": "0.2.14",
-    "@univerjs-pro/exchange-client": "^0.2.14",
-    "@univerjs-pro/print": "0.2.14",
-    "@univerjs-pro/sheets-exchange-client": "0.2.14",
-    "@univerjs-pro/sheets-print": "0.2.14",
-    "@univerjs/core": "0.2.14",
-    "@univerjs/data-validation": "0.2.14",
-    "@univerjs/design": "0.2.14",
-    "@univerjs/docs": "0.2.14",
-    "@univerjs/docs-drawing": "0.2.14",
-    "@univerjs/docs-drawing-ui": "0.2.14",
-    "@univerjs/docs-hyper-link": "^0.2.14",
-    "@univerjs/docs-hyper-link-ui": "0.2.14",
-    "@univerjs/docs-thread-comment-ui": "0.2.14",
-    "@univerjs/docs-ui": "0.2.14",
-    "@univerjs/drawing": "0.2.14",
-    "@univerjs/drawing-ui": "0.2.14",
-    "@univerjs/engine-formula": "0.2.14",
-    "@univerjs/engine-numfmt": "0.2.14",
-    "@univerjs/engine-render": "0.2.14",
-    "@univerjs/facade": "0.2.14",
-    "@univerjs/find-replace": "0.2.14",
+    "@univerjs-pro/collaboration": "0.2.15",
+    "@univerjs-pro/collaboration-client": "0.2.15",
+    "@univerjs-pro/exchange-client": "0.2.15",
+    "@univerjs-pro/print": "0.2.15",
+    "@univerjs-pro/sheets-exchange-client": "0.2.15",
+    "@univerjs-pro/sheets-print": "0.2.15",
+    "@univerjs/core": "0.2.15",
+    "@univerjs/data-validation": "0.2.15",
+    "@univerjs/design": "0.2.15",
+    "@univerjs/docs": "0.2.15",
+    "@univerjs/docs-drawing": "0.2.15",
+    "@univerjs/docs-drawing-ui": "0.2.15",
+    "@univerjs/docs-hyper-link": "^0.2.15",
+    "@univerjs/docs-hyper-link-ui": "0.2.15",
+    "@univerjs/docs-thread-comment-ui": "0.2.15",
+    "@univerjs/docs-ui": "0.2.15",
+    "@univerjs/drawing": "0.2.15",
+    "@univerjs/drawing-ui": "0.2.15",
+    "@univerjs/engine-formula": "0.2.15",
+    "@univerjs/engine-numfmt": "0.2.15",
+    "@univerjs/engine-render": "0.2.15",
+    "@univerjs/facade": "0.2.15",
+    "@univerjs/find-replace": "0.2.15",
     "@univerjs/icons": "^0.1.78",
-    "@univerjs/network": "0.2.14",
+    "@univerjs/network": "0.2.15",
     "@univerjs/protocol": "0.1.39-alpha.15",
-    "@univerjs/rpc": "0.2.14",
-    "@univerjs/sheets": "0.2.14",
-    "@univerjs/sheets-conditional-formatting": "0.2.14",
-    "@univerjs/sheets-conditional-formatting-ui": "0.2.14",
-    "@univerjs/sheets-crosshair-highlight": "^0.2.14",
-    "@univerjs/sheets-data-validation": "0.2.14",
-    "@univerjs/sheets-drawing": "0.2.14",
-    "@univerjs/sheets-drawing-ui": "0.2.14",
-    "@univerjs/sheets-filter": "0.2.14",
-    "@univerjs/sheets-filter-ui": "0.2.14",
-    "@univerjs/sheets-find-replace": "0.2.14",
-    "@univerjs/sheets-formula": "0.2.14",
-    "@univerjs/sheets-hyper-link": "0.2.14",
-    "@univerjs/sheets-hyper-link-ui": "0.2.14",
-    "@univerjs/sheets-numfmt": "0.2.14",
-    "@univerjs/sheets-thread-comment": "0.2.14",
-    "@univerjs/sheets-thread-comment-base": "0.2.14",
-    "@univerjs/sheets-ui": "0.2.14",
-    "@univerjs/sheets-zen-editor": "0.2.14",
-    "@univerjs/slides": "0.2.14",
-    "@univerjs/slides-ui": "0.2.14",
-    "@univerjs/thread-comment": "0.2.14",
-    "@univerjs/thread-comment-ui": "0.2.14",
-    "@univerjs/ui": "0.2.14",
-    "@univerjs/uniscript": "0.2.14",
+    "@univerjs/rpc": "0.2.15",
+    "@univerjs/sheets": "0.2.15",
+    "@univerjs/sheets-conditional-formatting": "0.2.15",
+    "@univerjs/sheets-conditional-formatting-ui": "0.2.15",
+    "@univerjs/sheets-crosshair-highlight": "^0.2.15",
+    "@univerjs/sheets-data-validation": "0.2.15",
+    "@univerjs/sheets-drawing": "0.2.15",
+    "@univerjs/sheets-drawing-ui": "0.2.15",
+    "@univerjs/sheets-filter": "0.2.15",
+    "@univerjs/sheets-filter-ui": "0.2.15",
+    "@univerjs/sheets-find-replace": "0.2.15",
+    "@univerjs/sheets-formula": "0.2.15",
+    "@univerjs/sheets-hyper-link": "0.2.15",
+    "@univerjs/sheets-hyper-link-ui": "0.2.15",
+    "@univerjs/sheets-numfmt": "0.2.15",
+    "@univerjs/sheets-thread-comment": "0.2.15",
+    "@univerjs/sheets-thread-comment-base": "0.2.15",
+    "@univerjs/sheets-ui": "0.2.15",
+    "@univerjs/sheets-zen-editor": "0.2.15",
+    "@univerjs/slides": "0.2.15",
+    "@univerjs/slides-ui": "0.2.15",
+    "@univerjs/thread-comment": "0.2.15",
+    "@univerjs/thread-comment-ui": "0.2.15",
+    "@univerjs/ui": "0.2.15",
+    "@univerjs/uniscript": "0.2.15",
     "@visactor/univer-vchart-plugin": "^2.0.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "monaco-editor": "^0.51.0",
-    "next": "14.2.11",
+    "monaco-editor": "^0.52.0",
+    "next": "14.2.13",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
     "pako": "^2.1.0",
     "prism-react-renderer": "^2.4.0",
-    "rc-slider": "^11.1.5",
+    "rc-slider": "^11.1.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-live": "^4.1.7",
@@ -104,11 +108,11 @@
     "@eslint-react/eslint-plugin": "^1.14.1",
     "@types/node": "^22.5.4",
     "@types/pako": "^2.0.3",
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "@univerjs/webpack-plugin": "0.5.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "9.10.0",
+    "eslint": "9.11.0",
     "eslint-plugin-react-hooks": "5.1.0-rc-8269d55d-20240802",
     "eslint-plugin-react-refresh": "^0.4.11",
     "eslint-plugin-readable-tailwind": "^1.8.0",
