feat: update to v0.4.0-alpha.1

--- a/package.json
+++ b/package.json
@@ -34,57 +34,59 @@
     "@react-spring/web": "^9.7.4",
     "@stackblitz/sdk": "^1.11.0",
     "@types/youtube-player": "^5.5.11",
-    "@univerjs-pro/collaboration": "0.3.0",
-    "@univerjs-pro/collaboration-client": "0.3.0",
-    "@univerjs-pro/exchange-client": "0.3.0",
-    "@univerjs-pro/print": "0.3.0",
-    "@univerjs-pro/sheets-exchange-client": "0.3.0",
-    "@univerjs-pro/sheets-print": "0.3.0",
-    "@univerjs/core": "0.3.0",
-    "@univerjs/data-validation": "0.3.0",
-    "@univerjs/design": "0.3.0",
-    "@univerjs/docs": "0.3.0",
-    "@univerjs/docs-drawing": "0.3.0",
-    "@univerjs/docs-drawing-ui": "0.3.0",
-    "@univerjs/docs-hyper-link": "^0.3.0",
-    "@univerjs/docs-hyper-link-ui": "0.3.0",
-    "@univerjs/docs-thread-comment-ui": "0.3.0",
-    "@univerjs/docs-ui": "0.3.0",
-    "@univerjs/drawing": "0.3.0",
-    "@univerjs/drawing-ui": "0.3.0",
-    "@univerjs/engine-formula": "0.3.0",
-    "@univerjs/engine-numfmt": "0.3.0",
-    "@univerjs/engine-render": "0.3.0",
-    "@univerjs/facade": "0.3.0",
-    "@univerjs/find-replace": "0.3.0",
+    "@univerjs-pro/collaboration": "0.4.0-alpha.1",
+    "@univerjs-pro/collaboration-client": "0.4.0-alpha.1",
+    "@univerjs-pro/exchange-client": "0.4.0-alpha.1",
+    "@univerjs-pro/print": "0.4.0-alpha.1",
+    "@univerjs-pro/sheets-exchange-client": "0.4.0-alpha.1",
+    "@univerjs-pro/sheets-print": "0.4.0-alpha.1",
+    "@univerjs/core": "0.4.0-alpha.1",
+    "@univerjs/data-validation": "0.4.0-alpha.1",
+    "@univerjs/design": "0.4.0-alpha.1",
+    "@univerjs/docs": "0.4.0-alpha.1",
+    "@univerjs/docs-drawing": "0.4.0-alpha.1",
+    "@univerjs/docs-drawing-ui": "0.4.0-alpha.1",
+    "@univerjs/docs-hyper-link": "^0.4.0-alpha.1",
+    "@univerjs/docs-hyper-link-ui": "0.4.0-alpha.1",
+    "@univerjs/docs-thread-comment-ui": "0.4.0-alpha.1",
+    "@univerjs/docs-ui": "0.4.0-alpha.1",
+    "@univerjs/drawing": "0.4.0-alpha.1",
+    "@univerjs/drawing-ui": "0.4.0-alpha.1",
+    "@univerjs/engine-formula": "0.4.0-alpha.1",
+    "@univerjs/engine-numfmt": "0.4.0-alpha.1",
+    "@univerjs/engine-render": "0.4.0-alpha.1",
+    "@univerjs/facade": "0.4.0-alpha.1",
+    "@univerjs/find-replace": "0.4.0-alpha.1",
     "@univerjs/icons": "^0.1.79",
-    "@univerjs/network": "0.3.0",
+    "@univerjs/network": "0.4.0-alpha.1",
     "@univerjs/protocol": "0.1.39-alpha.15",
-    "@univerjs/rpc": "0.3.0",
-    "@univerjs/sheets": "0.3.0",
-    "@univerjs/sheets-conditional-formatting": "0.3.0",
-    "@univerjs/sheets-conditional-formatting-ui": "0.3.0",
-    "@univerjs/sheets-crosshair-highlight": "^0.3.0",
-    "@univerjs/sheets-data-validation": "0.3.0",
-    "@univerjs/sheets-drawing": "0.3.0",
-    "@univerjs/sheets-drawing-ui": "0.3.0",
-    "@univerjs/sheets-filter": "0.3.0",
-    "@univerjs/sheets-filter-ui": "0.3.0",
-    "@univerjs/sheets-find-replace": "0.3.0",
-    "@univerjs/sheets-formula": "0.3.0",
-    "@univerjs/sheets-hyper-link": "0.3.0",
-    "@univerjs/sheets-hyper-link-ui": "0.3.0",
-    "@univerjs/sheets-numfmt": "0.3.0",
-    "@univerjs/sheets-thread-comment": "0.3.0",
-    "@univerjs/sheets-thread-comment-base": "0.3.0",
-    "@univerjs/sheets-ui": "0.3.0",
-    "@univerjs/sheets-zen-editor": "0.3.0",
-    "@univerjs/slides": "0.3.0",
-    "@univerjs/slides-ui": "0.3.0",
-    "@univerjs/thread-comment": "0.3.0",
-    "@univerjs/thread-comment-ui": "0.3.0",
-    "@univerjs/ui": "0.3.0",
-    "@univerjs/uniscript": "0.3.0",
+    "@univerjs/rpc": "0.4.0-alpha.1",
+    "@univerjs/sheets": "0.4.0-alpha.1",
+    "@univerjs/sheets-conditional-formatting": "0.4.0-alpha.1",
+    "@univerjs/sheets-conditional-formatting-ui": "0.4.0-alpha.1",
+    "@univerjs/sheets-crosshair-highlight": "^0.4.0-alpha.1",
+    "@univerjs/sheets-data-validation": "0.4.0-alpha.1",
+    "@univerjs/sheets-data-validation-ui": "0.4.0-alpha.1",
+    "@univerjs/sheets-drawing": "0.4.0-alpha.1",
+    "@univerjs/sheets-drawing-ui": "0.4.0-alpha.1",
+    "@univerjs/sheets-filter": "0.4.0-alpha.1",
+    "@univerjs/sheets-filter-ui": "0.4.0-alpha.1",
+    "@univerjs/sheets-find-replace": "0.4.0-alpha.1",
+    "@univerjs/sheets-formula": "0.4.0-alpha.1",
+    "@univerjs/sheets-formula-ui": "0.4.0-alpha.1",
+    "@univerjs/sheets-hyper-link": "0.4.0-alpha.1",
+    "@univerjs/sheets-hyper-link-ui": "0.4.0-alpha.1",
+    "@univerjs/sheets-numfmt": "0.4.0-alpha.1",
+    "@univerjs/sheets-thread-comment": "0.4.0-alpha.1",
+    "@univerjs/sheets-thread-comment-base": "0.4.0-alpha.1",
+    "@univerjs/sheets-ui": "0.4.0-alpha.1",
+    "@univerjs/sheets-zen-editor": "0.4.0-alpha.1",
+    "@univerjs/slides": "0.4.0-alpha.1",
+    "@univerjs/slides-ui": "0.4.0-alpha.1",
+    "@univerjs/thread-comment": "0.4.0-alpha.1",
+    "@univerjs/thread-comment-ui": "0.4.0-alpha.1",
+    "@univerjs/ui": "0.4.0-alpha.1",
+    "@univerjs/uniscript": "0.4.0-alpha.1",
     "@visactor/univer-vchart-plugin": "^2.0.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
