chore: fix build errror

--- a/package.json
+++ b/package.json
@@ -34,59 +34,58 @@
     "@react-spring/web": "^9.7.4",
     "@stackblitz/sdk": "^1.11.0",
     "@types/youtube-player": "^5.5.11",
-    "@univerjs-pro/collaboration": "0.4.0-alpha.1",
-    "@univerjs-pro/collaboration-client": "0.4.0-alpha.1",
-    "@univerjs-pro/exchange-client": "0.4.0-alpha.1",
-    "@univerjs-pro/print": "0.4.0-alpha.1",
-    "@univerjs-pro/sheets-exchange-client": "0.4.0-alpha.1",
-    "@univerjs-pro/sheets-print": "0.4.0-alpha.1",
-    "@univerjs/core": "0.4.0-alpha.1",
-    "@univerjs/data-validation": "0.4.0-alpha.1",
-    "@univerjs/design": "0.4.0-alpha.1",
-    "@univerjs/docs": "0.4.0-alpha.1",
-    "@univerjs/docs-drawing": "0.4.0-alpha.1",
-    "@univerjs/docs-drawing-ui": "0.4.0-alpha.1",
-    "@univerjs/docs-hyper-link": "^0.4.0-alpha.1",
-    "@univerjs/docs-hyper-link-ui": "0.4.0-alpha.1",
-    "@univerjs/docs-thread-comment-ui": "0.4.0-alpha.1",
-    "@univerjs/docs-ui": "0.4.0-alpha.1",
-    "@univerjs/drawing": "0.4.0-alpha.1",
-    "@univerjs/drawing-ui": "0.4.0-alpha.1",
-    "@univerjs/engine-formula": "0.4.0-alpha.1",
-    "@univerjs/engine-numfmt": "0.4.0-alpha.1",
-    "@univerjs/engine-render": "0.4.0-alpha.1",
-    "@univerjs/facade": "0.4.0-alpha.1",
-    "@univerjs/find-replace": "0.4.0-alpha.1",
+    "@univerjs-pro/collaboration": "0.4.0-alpha.2",
+    "@univerjs-pro/collaboration-client": "0.4.0-alpha.2",
+    "@univerjs-pro/exchange-client": "0.4.0-alpha.2",
+    "@univerjs-pro/print": "0.4.0-alpha.2",
+    "@univerjs-pro/sheets-exchange-client": "0.4.0-alpha.2",
+    "@univerjs-pro/sheets-print": "0.4.0-alpha.2",
+    "@univerjs/core": "0.4.0-alpha.2",
+    "@univerjs/data-validation": "0.4.0-alpha.2",
+    "@univerjs/design": "0.4.0-alpha.2",
+    "@univerjs/docs": "0.4.0-alpha.2",
+    "@univerjs/docs-drawing": "0.4.0-alpha.2",
+    "@univerjs/docs-drawing-ui": "0.4.0-alpha.2",
+    "@univerjs/docs-hyper-link": "0.4.0-alpha.2",
+    "@univerjs/docs-hyper-link-ui": "0.4.0-alpha.2",
+    "@univerjs/docs-thread-comment-ui": "0.4.0-alpha.2",
+    "@univerjs/docs-ui": "0.4.0-alpha.2",
+    "@univerjs/drawing": "0.4.0-alpha.2",
+    "@univerjs/drawing-ui": "0.4.0-alpha.2",
+    "@univerjs/engine-formula": "0.4.0-alpha.2",
+    "@univerjs/engine-numfmt": "0.4.0-alpha.2",
+    "@univerjs/engine-render": "0.4.0-alpha.2",
+    "@univerjs/facade": "0.4.0-alpha.2",
+    "@univerjs/find-replace": "0.4.0-alpha.2",
     "@univerjs/icons": "^0.1.80",
-    "@univerjs/network": "0.4.0-alpha.1",
-    "@univerjs/protocol": "0.1.39-alpha.15",
-    "@univerjs/rpc": "0.4.0-alpha.1",
-    "@univerjs/sheets": "0.4.0-alpha.1",
-    "@univerjs/sheets-conditional-formatting": "0.4.0-alpha.1",
-    "@univerjs/sheets-conditional-formatting-ui": "0.4.0-alpha.1",
-    "@univerjs/sheets-crosshair-highlight": "^0.4.0-alpha.1",
-    "@univerjs/sheets-data-validation": "0.4.0-alpha.1",
-    "@univerjs/sheets-data-validation-ui": "0.4.0-alpha.1",
-    "@univerjs/sheets-drawing": "0.4.0-alpha.1",
-    "@univerjs/sheets-drawing-ui": "0.4.0-alpha.1",
-    "@univerjs/sheets-filter": "0.4.0-alpha.1",
-    "@univerjs/sheets-filter-ui": "0.4.0-alpha.1",
-    "@univerjs/sheets-find-replace": "0.4.0-alpha.1",
-    "@univerjs/sheets-formula": "0.4.0-alpha.1",
-    "@univerjs/sheets-formula-ui": "0.4.0-alpha.1",
-    "@univerjs/sheets-hyper-link": "0.4.0-alpha.1",
-    "@univerjs/sheets-hyper-link-ui": "0.4.0-alpha.1",
-    "@univerjs/sheets-numfmt": "0.4.0-alpha.1",
-    "@univerjs/sheets-thread-comment": "0.4.0-alpha.1",
-    "@univerjs/sheets-thread-comment-base": "0.4.0-alpha.1",
-    "@univerjs/sheets-ui": "0.4.0-alpha.1",
-    "@univerjs/sheets-zen-editor": "0.4.0-alpha.1",
-    "@univerjs/slides": "0.4.0-alpha.1",
-    "@univerjs/slides-ui": "0.4.0-alpha.1",
-    "@univerjs/thread-comment": "0.4.0-alpha.1",
-    "@univerjs/thread-comment-ui": "0.4.0-alpha.1",
-    "@univerjs/ui": "0.4.0-alpha.1",
-    "@univerjs/uniscript": "0.4.0-alpha.1",
+    "@univerjs/network": "0.4.0-alpha.2",
+    "@univerjs/rpc": "0.4.0-alpha.2",
+    "@univerjs/sheets": "0.4.0-alpha.2",
+    "@univerjs/sheets-conditional-formatting": "0.4.0-alpha.2",
+    "@univerjs/sheets-conditional-formatting-ui": "0.4.0-alpha.2",
+    "@univerjs/sheets-crosshair-highlight": "^0.4.0-alpha.2",
+    "@univerjs/sheets-data-validation": "0.4.0-alpha.2",
+    "@univerjs/sheets-data-validation-ui": "0.4.0-alpha.2",
+    "@univerjs/sheets-drawing": "0.4.0-alpha.2",
+    "@univerjs/sheets-drawing-ui": "0.4.0-alpha.2",
+    "@univerjs/sheets-filter": "0.4.0-alpha.2",
+    "@univerjs/sheets-filter-ui": "0.4.0-alpha.2",
+    "@univerjs/sheets-find-replace": "0.4.0-alpha.2",
+    "@univerjs/sheets-formula": "0.4.0-alpha.2",
+    "@univerjs/sheets-formula-ui": "0.4.0-alpha.2",
+    "@univerjs/sheets-hyper-link": "0.4.0-alpha.2",
+    "@univerjs/sheets-hyper-link-ui": "0.4.0-alpha.2",
+    "@univerjs/sheets-numfmt": "0.4.0-alpha.2",
+    "@univerjs/sheets-thread-comment": "0.4.0-alpha.2",
+    "@univerjs/sheets-thread-comment-base": "0.4.0-alpha.2",
+    "@univerjs/sheets-ui": "0.4.0-alpha.2",
+    "@univerjs/sheets-zen-editor": "0.4.0-alpha.2",
+    "@univerjs/slides": "0.4.0-alpha.2",
+    "@univerjs/slides-ui": "0.4.0-alpha.2",
+    "@univerjs/thread-comment": "0.4.0-alpha.2",
+    "@univerjs/thread-comment-ui": "0.4.0-alpha.2",
+    "@univerjs/ui": "0.4.0-alpha.2",
+    "@univerjs/uniscript": "0.4.0-alpha.2",
     "@visactor/univer-vchart-plugin": "^2.0.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
@@ -118,6 +117,7 @@
     "eslint-plugin-react-hooks": "5.1.0-rc-8269d55d-20240802",
     "eslint-plugin-react-refresh": "^0.4.11",
     "eslint-plugin-readable-tailwind": "^1.8.0",
+    "ignore-loader": "^0.1.2",
     "lint-staged": "^15.2.10",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "postcss": "^8.4.45",
